test/good/functions/variadic01.px

func sum(...args: [Int]): Int def
    return args.reduce(_+_)

print sum()
print sum(2)
print sum(3, -4, 6)
