test/bad/functions/variadic06.px

func f(Int... args) def
    return

f(2, args=[3])
